--- a/HIGExampleApp/SegmentedControls.storyboard
+++ b/HIGExampleApp/SegmentedControls.storyboard
@@ -20,7 +20,29 @@
                     <view key="view" contentMode="scaleToFill" id="HCV-ew-mXj">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="GKF-pX-8wZ">
+                                <rect key="frame" x="127" y="20" width="121" height="29"/>
+                                <segments>
+                                    <segment title="First"/>
+                                    <segment title="Second"/>
+                                </segments>
+                            </segmentedControl>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="SkP-sQ-f2F">
+                                <rect key="frame" x="149" y="105" width="77" height="29"/>
+                                <segments>
+                                    <segment title="" image="icon-gear"/>
+                                    <segment title="" image="icon-gear"/>
+                                </segments>
+                            </segmentedControl>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="SkP-sQ-f2F" firstAttribute="top" secondItem="GKF-pX-8wZ" secondAttribute="bottom" constant="57" id="H3w-RW-ThT"/>
+                            <constraint firstItem="SkP-sQ-f2F" firstAttribute="centerX" secondItem="HCV-ew-mXj" secondAttribute="centerX" id="dGX-35-Ffx"/>
+                            <constraint firstItem="GKF-pX-8wZ" firstAttribute="top" secondItem="n6D-F1-TEm" secondAttribute="bottom" id="dYS-kC-3Eh"/>
+                            <constraint firstItem="GKF-pX-8wZ" firstAttribute="centerX" secondItem="HCV-ew-mXj" secondAttribute="centerX" id="ztC-jJ-rEY"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aTP-KQ-HOa" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -28,4 +50,7 @@
             <point key="canvasLocation" x="231" y="176"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="icon-gear" width="24" height="24"/>
+    </resources>
 </document>
