--- a/HIGExampleApp/Sliders.storyboard
+++ b/HIGExampleApp/Sliders.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,7 +21,17 @@
                     <view key="view" contentMode="scaleToFill" id="487-9S-owf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="SIx-6v-wQZ">
+                                <rect key="frame" x="24" y="318" width="326" height="31"/>
+                            </slider>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="SIx-6v-wQZ" firstAttribute="leading" secondItem="487-9S-owf" secondAttribute="leadingMargin" constant="10" id="DFK-GK-dXZ"/>
+                            <constraint firstItem="SIx-6v-wQZ" firstAttribute="centerY" secondItem="487-9S-owf" secondAttribute="centerY" id="Fmt-bM-tHl"/>
+                            <constraint firstItem="SIx-6v-wQZ" firstAttribute="centerX" secondItem="487-9S-owf" secondAttribute="centerX" id="e7C-bI-ram"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cwZ-8T-wEI" userLabel="First Responder" sceneMemberID="firstResponder"/>
