--- a/HIGExampleApp/TextFields.storyboard
+++ b/HIGExampleApp/TextFields.storyboard
@@ -20,7 +20,66 @@
                     <view key="view" contentMode="scaleToFill" id="eY6-RY-E0y">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="KkW-2T-avr">
+                                <rect key="frame" x="37.5" y="193.5" width="300" height="280"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" highlighted="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Default - Highlighted" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="g2N-Vx-bU3">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="300" id="AHP-d3-byS"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone Pad" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YYh-S2-EwZ">
+                                        <rect key="frame" x="0.0" y="50" width="300" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="300" id="oe7-br-gOQ"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Pad - Dark" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lat-lF-gFA">
+                                        <rect key="frame" x="0.0" y="100" width="300" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="300" id="Hxg-ih-YHA"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="emailAddress" keyboardAppearance="alert"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="URL Pad - No Spell Check - Continue" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ndU-M6-ffo">
+                                        <rect key="frame" x="0.0" y="150" width="300" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="300" id="S3x-uA-xnF"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <textInputTraits key="textInputTraits" spellCheckingType="no" keyboardType="URL" keyboardAppearance="light" returnKeyType="continue"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Twitter Pad - All Caps - No Correction" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IG0-QG-P9Z">
+                                        <rect key="frame" x="0.0" y="200" width="300" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="300" id="gWV-M1-zL5"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" autocorrectionType="no" keyboardType="twitter" returnKeyType="google"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Decimal Pad - Green Text" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PJt-MG-IiT">
+                                        <rect key="frame" x="0.0" y="250" width="300" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="300" id="MuH-6k-EKY"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.033272905462604294" green="0.32183593749999995" blue="0.036812585027362198" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="KkW-2T-avr" firstAttribute="centerX" secondItem="eY6-RY-E0y" secondAttribute="centerX" id="Aos-Nz-sQF"/>
+                            <constraint firstItem="KkW-2T-avr" firstAttribute="centerY" secondItem="eY6-RY-E0y" secondAttribute="centerY" id="raK-r9-Wiy"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h0E-jb-P5U" userLabel="First Responder" sceneMemberID="firstResponder"/>
