--- a/HIGExampleApp/ActionSheets.storyboard
+++ b/HIGExampleApp/ActionSheets.storyboard
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="HK8-BD-JLx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="HK8-BD-JLx">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Action Sheets-->
         <scene sceneID="4OO-FZ-2wQ">
             <objects>
-                <viewController title="Action Sheets" id="HK8-BD-JLx" sceneMemberID="viewController">
+                <viewController title="Action Sheets" id="HK8-BD-JLx" customClass="ActionSheetsViewController" customModule="HIGExampleApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="zjO-9A-h2a"/>
                         <viewControllerLayoutGuide type="bottom" id="Hha-I5-TTM"/>
@@ -20,7 +20,20 @@
                     <view key="view" contentMode="scaleToFill" id="oKO-fl-0aR">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cl2-Op-z7B">
+                                <rect key="frame" x="118" y="88" width="138" height="30"/>
+                                <state key="normal" title="Toggle Action Sheet"/>
+                                <connections>
+                                    <action selector="toggleActionSheet:" destination="HK8-BD-JLx" eventType="touchUpInside" id="ucE-1U-tbK"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Cl2-Op-z7B" firstAttribute="top" secondItem="zjO-9A-h2a" secondAttribute="bottom" constant="68" id="bea-z2-9Yr"/>
+                            <constraint firstItem="Cl2-Op-z7B" firstAttribute="centerX" secondItem="oKO-fl-0aR" secondAttribute="centerX" id="qkL-hd-eCL"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QSX-3I-7mt" userLabel="First Responder" sceneMemberID="firstResponder"/>
