--- a/HIGExampleApp/ImageViews.storyboard
+++ b/HIGExampleApp/ImageViews.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,7 +21,19 @@
                     <view key="view" contentMode="scaleToFill" id="jNq-MG-H1e">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ps_hero" translatesAutoresizingMaskIntoConstraints="NO" id="Yby-6J-mER">
+                                <rect key="frame" x="16" y="0.0" width="343" height="667"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="Yby-6J-mER" secondAttribute="trailing" id="U1d-w3-Gqc"/>
+                            <constraint firstItem="Yby-6J-mER" firstAttribute="centerY" secondItem="jNq-MG-H1e" secondAttribute="centerY" id="eud-j0-aLk"/>
+                            <constraint firstItem="Yby-6J-mER" firstAttribute="leading" secondItem="jNq-MG-H1e" secondAttribute="leadingMargin" id="pTo-N3-pnl"/>
+                            <constraint firstItem="ovN-Z9-geD" firstAttribute="top" secondItem="Yby-6J-mER" secondAttribute="bottom" id="sKz-g7-u0g"/>
+                            <constraint firstItem="Yby-6J-mER" firstAttribute="centerX" secondItem="jNq-MG-H1e" secondAttribute="centerX" id="xeM-Jd-zts"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="djs-m8-xm3" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -28,4 +41,7 @@
             <point key="canvasLocation" x="111" y="157"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ps_hero" width="1950" height="1173"/>
+    </resources>
 </document>
