Added maps view

--- a/HIGExampleApp/Maps.storyboard
+++ b/HIGExampleApp/Maps.storyboard
@@ -12,7 +12,7 @@
         <!--Maps-->
         <scene sceneID="hss-OG-n0b">
             <objects>
-                <viewController title="Maps" id="T9A-TY-AKd" sceneMemberID="viewController">
+                <viewController title="Maps" id="T9A-TY-AKd" customClass="MapsViewController" customModule="HIGExampleApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="2ZJ-ts-ayd"/>
                         <viewControllerLayoutGuide type="bottom" id="27x-oX-pNm"/>
@@ -20,12 +20,21 @@
                     <view key="view" contentMode="scaleToFill" id="QLx-gn-dug">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="YlU-Nl-rcl">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="YlU-Nl-rcl" id="rZq-87-qwy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7um-m0-3oJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="258" y="171"/>
+            <point key="canvasLocation" x="256.80000000000001" y="170.46476761619192"/>
         </scene>
     </scenes>
 </document>
