--- a/HIGExampleApp/Pages.storyboard
+++ b/HIGExampleApp/Pages.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="bEO-bH-5ev">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="fSW-G7-Ecv">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,23 +9,67 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Pages-->
-        <scene sceneID="T5Z-yJ-kMm">
+        <!--Page View Controller-->
+        <scene sceneID="GFS-HC-3ro">
             <objects>
-                <viewController title="Pages" id="bEO-bH-5ev" sceneMemberID="viewController">
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="fSW-G7-Ecv" customClass="PageViewController" customModule="HIGExampleApp" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RxL-gk-Pbq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="690" y="182"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="aol-wg-S8T">
+            <objects>
+                <viewController storyboardIdentifier="FirstView" id="47k-ei-Cr4" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="0JF-Si-YeW"/>
-                        <viewControllerLayoutGuide type="bottom" id="h8P-p0-xPq"/>
+                        <viewControllerLayoutGuide type="top" id="KTh-wB-Fvx"/>
+                        <viewControllerLayoutGuide type="bottom" id="McC-JT-jnN"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="XfY-I9-HgE">
+                    <view key="view" contentMode="scaleToFill" id="Sca-bh-lSp">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.90588235289999997" green="0.29803921570000003" blue="0.23529411759999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="jvQ-sE-yEY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2oT-iA-gP0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="110" y="115"/>
+            <point key="canvasLocation" x="1470" y="182"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="NW8-3p-du8">
+            <objects>
+                <viewController storyboardIdentifier="SecondView" id="iEp-ql-d07" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="G2e-mm-TOw"/>
+                        <viewControllerLayoutGuide type="bottom" id="6FG-Ey-ovS"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="hjI-tL-QJH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.20392156859999999" green="0.59607843140000005" blue="0.85882352939999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="71O-Z9-dmj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2366" y="182"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="CDD-HN-Ili">
+            <objects>
+                <viewController storyboardIdentifier="ThirdView" id="KpH-lb-D1r" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cmr-3a-VXH"/>
+                        <viewControllerLayoutGuide type="bottom" id="J1v-CQ-qPR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Kya-wk-FMI">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.18039215689999999" green="0.80000000000000004" blue="0.4431372549" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ljw-6G-l6l" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3262" y="182"/>
         </scene>
     </scenes>
 </document>
